--- a/parts/header.html
+++ b/parts/header.html
@@ -7,9 +7,9 @@
 <ul class="wp-block-social-links has-visible-labels is-style-logos-only"><!-- wp:social-link {"url":" https://www.linkedin.com/company/epic-power-converters-s-l-/?originalSubdomain=es","service":"linkedin","label":""} /--></ul>
 <!-- /wp:social-links -->
 
-<!-- wp:buttons -->
-<div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"primary-10","className":"is-style-with-arrow","style":{"border":{"radius":"8px"},"spacing":{"padding":{"top":"0.5rem","bottom":"0.5rem"}}},"fontSize":"small"} -->
-<div class="wp-block-button has-custom-font-size is-style-with-arrow has-small-font-size"><a class="wp-block-button__link has-primary-10-background-color has-background wp-element-button" href="http://localhost:8888/epic-lifts/contacto/" style="border-radius:8px;padding-top:0.5rem;padding-bottom:0.5rem">Contactar</a></div>
+<!-- wp:buttons {"layout":{"type":"flex","justifyContent":"center"}} -->
+<div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"primary","className":"is-style-with-arrow","style":{"border":{"radius":"8px"},"spacing":{"padding":{"left":"var:preset|spacing|20","right":"var:preset|spacing|20","top":"0.5rem","bottom":"0.5rem"}}},"fontSize":"small"} -->
+<div class="wp-block-button has-custom-font-size is-style-with-arrow has-small-font-size"><a class="wp-block-button__link has-primary-background-color has-background wp-element-button" href="https://viral.sumun.net/epic-lift/contacto/" style="border-radius:8px;padding-top:0.5rem;padding-right:var(--wp--preset--spacing--20);padding-bottom:0.5rem;padding-left:var(--wp--preset--spacing--20)">Contactar</a></div>
 <!-- /wp:button --></div>
 <!-- /wp:buttons --></div>
 <!-- /wp:group --></div>
